welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlowers(c:Color) {
	faireS(Color.Pink)
}

def faireS(c:Color) {
	//colorier les deux carreaux (S)
	setCouleurBrosse(c)
	baisseBrosse()
	leveBrosse()
	avance()
	gauche()
	avance()
	baisseBrosse()
	leveBrosse()
	if (!estFaceMur) {
		avance()
	}
}
